--- a/style.css
+++ b/style.css
@@ -7,3 +7,8 @@ header {
     font-style: italic;
     color: white;
 }
+.link {
+    text-decoration: none;
+    font-family: "PT Sans Narrow";
+    color: black;
+}
