--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ header {
 .input-box {
     padding: 10px 60px 10px 5px;
 }
+.search-btn {
+    background: rgb(32, 31, 31);
+    color: white;
+    padding: 10px 45px;
+}
