--- a/style.css
+++ b/style.css
@@ -54,3 +54,8 @@ main h2, h3 {
 main p {
     font-family: "PT Sans Narrow", sans-serif;
 }
+.sidebar {
+    background:rgb(30, 228, 246);
+    padding: 15px;
+    margin: 15px 0 15px 0;
+}
