--- a/style.css
+++ b/style.css
@@ -59,3 +59,9 @@ main p {
     padding: 15px;
     margin: 15px 0 15px 0;
 }
+footer {
+    background: white;
+    padding: 15px 10px;
+    font-family: "PT Sans Narrow";
+    margin-bottom: 30px;
+}
